--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "@azure/storage-blob": "^12.9.0",
     "@google-cloud/storage": "^5.19.2",
     "@octokit/rest": "^18.12.0",
+    "@types/cli-progress": "^3.9.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.25",
     "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.10",
+    "chalk": "^5.0.1",
+    "cli-progress": "^3.10.0",
+    "fs-extra": "^10.1.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "yargs": "^17.4.1"
